syntax = "proto3";

package sniffit.archivist;
option go_package = "github.com/schmurfy/sniffit/pb";

service Archivist {
  rpc SendPacket(stream Packet) returns (SendPacketResp);
}

message SendPacketResp {

}

message Packet {
  string id             = 1;
  bytes data            = 2;
  int64 timestamp       = 4;
  int64 capture_length  = 5;
  int64 data_length     = 6;
}

message IndexArray {
  repeated string ids = 1;
}